<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="rate"
            type="com.khs.ui.model.RateItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/dot_bg">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_line"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_line"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/nextred" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_e_voucher"
            style="@style/App.TextStyle.Body4"
            render="@{rate.member}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/e_voucher_rate"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/iv_next"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constraintTop_toTopOf="@id/iv_next" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/App.TextStyle.Body3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{rate.title}"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/iv_next"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/tv_e_voucher"
            app:layout_goneMarginTop="0dp"
            tools:text="Mobile App Special Voucher" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_facility_1"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintBottom_toTopOf="@id/tv_facility_1"
            app:layout_constraintEnd_toEndOf="@id/tv_facility_1"
            app:layout_constraintStart_toStartOf="@id/tv_facility_1"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:srcCompat="@drawable/fnb" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_facility_1"
            style="@style/App.TextStyle.Body5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_8dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8dp"
            android:text="@string/inclusive_breakfast"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/iv_facility_1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_facility_2"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            app:layout_constraintBottom_toTopOf="@id/tv_facility_2"
            app:layout_constraintEnd_toEndOf="@id/tv_facility_2"
            app:layout_constraintStart_toStartOf="@id/tv_facility_2"
            app:layout_constraintTop_toTopOf="@id/iv_facility_1"
            app:srcCompat="@drawable/discount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_facility_2"
            style="@style/App.TextStyle.Body5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_8dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8dp"
            android:text="@string/percent_off"
            android:textColor="@color/grey"
            app:layout_constraintStart_toEndOf="@id/tv_facility_1"
            app:layout_constraintTop_toBottomOf="@id/iv_facility_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_rates"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_rates"
            android:textAllCaps="false"
            android:textColor="@color/light_orange"
            android:textSize="@dimen/_12sp"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintTop_toTopOf="@id/iv_facility_1"
            app:strokeColor="@color/light_orange"
            app:strokeWidth="1dp" />

        <View
            android:id="@+id/vw_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/tv_facility_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_avg"
            style="@style/App.TextStyle.Body3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/avg_per_room"
            app:layout_constraintEnd_toStartOf="@id/tv_sgd"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/vw_divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_charge"
            style="@style/App.TextStyle.Body5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2dp"
            android:text="@string/subject_service"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toStartOf="@id/tv_sgd"
            app:layout_constraintStart_toStartOf="@id/start_line"
            app:layout_constraintTop_toBottomOf="@id/tv_avg"
            app:layout_goneMarginBottom="@dimen/_16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sgd"
            style="@style/App.TextStyle.Body5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sgd"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_price"
            app:layout_constraintEnd_toStartOf="@id/tv_price"
            app:layout_constraintTop_toTopOf="@id/tv_price" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_price"
            style="@style/App.TextStyle.Body3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{rate.price}"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/end_line"
            app:layout_constraintTop_toTopOf="@id/tv_avg"
            tools:text="161.42" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_member_deal"
            render="@{rate.member}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:clickable="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/members_deals"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/light_orange"
            app:icon="@drawable/ic_membership"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_charge" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/btn_member_deal"
            app:layout_goneMarginTop="@dimen/_8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>